--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
+    
+    <div id="app"> </div>
+    <button id="btn">Click</button>
+    <script src="my.js"></script>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
