--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is the title of the webpage!</title>
   </head>
   <body>
     
-    <div id="app"> </div>
+    <div id="app"></div>
     <button id="btn">Click</button>
     <script src="my.js"></script>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+   
+    
   </body>
 </html>
